crates/ppcjit/src/snapshots/ppcjit__test__x86_64_v1_gu_vec_add_disasm.snap
---
source: crates/ppcjit/src/test.rs
expression: disasm
---
  pushq %rbp
  unwind PushFrameRegs { offset_upward_to_caller_sp: 16 }
  movq %rsp, %rbp
  unwind DefineNewFrame { offset_upward_to_caller_sp: 16, offset_downward_to_clobbers: 48 }
  subq $0xe0, %rsp
  movq %rbx, 0xb0(%rsp)
  unwind SaveReg { clobber_offset: 0, reg: p3i }
  movq %r12, 0xb8(%rsp)
  unwind SaveReg { clobber_offset: 8, reg: p12i }
  movq %r13, 0xc0(%rsp)
  unwind SaveReg { clobber_offset: 16, reg: p13i }
  movq %r14, 0xc8(%rsp)
  unwind SaveReg { clobber_offset: 24, reg: p14i }
  movq %r15, 0xd0(%rsp)
  unwind SaveReg { clobber_offset: 32, reg: p15i }
block0:
  movq %rdi, <offset:1>+8(%rsp)
  movq %rsi, <offset:1>+0x10(%rsp)
  movq %rdx, <offset:1>+0x18(%rsp)
  movl 0x2a8(%rsi), %eax
  shrl $0xd, %eax
  testb $0x1, %al
  jnz     label4; j label1
block3:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block4:
  movq <offset:1>+0x10(%rsp), %rsi
  movl 0x14(%rsi), %r12d
  movl 0x368(%rsi), %edx
  movq %rdx, %r13
  leaq <offset:1>+(%rsp), %rcx
  movq %rcx, <offset:1>+0xa0(%rsp)
  load_ext_name userextname10+0, %rax
  movq %r12, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label8; j label5
block7:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block8:
  movsd <offset:1>+(%rsp), %xmm0
  movdqu %xmm0, <offset:1>+0x48(%rsp)
  movzbl %al, %eax
  leal (%r12, %rax), %ebx
  load_ext_name userextname10+0, %rax
  movq %r13, %rdx
  movq <offset:1>+0xa0(%rsp), %rcx
  movq %rbx, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label12; j label9
block11:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block12:
  movsd <offset:1>+(%rsp), %xmm0
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu %xmm0, <offset:1>+0x38(%rsp)
  movl (%rsi), %ebx
  movl 0x18(%rsi), %r13d
  movl 0x368(%rsi), %edx
  movq %rdx, %r15
  load_ext_name userextname10+0, %rax
  movq <offset:1>+0xa0(%rsp), %rcx
  movq %r13, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label16; j label13
block15:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block16:
  movsd <offset:1>+(%rsp), %xmm4
  movdqu %xmm4, <offset:1>+0x28(%rsp)
  movzbl %al, %esi
  leal (%r13, %rsi), %r14d
  load_ext_name userextname10+0, %r8
  movq %r15, %rdx
  movq <offset:1>+0xa0(%rsp), %rcx
  movq %r14, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%r8
  testb %al, %al
  jnz     label20; j label17
block19:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block20:
  movdqu <offset:1>+0x38(%rsp), %xmm1
  movdqu <offset:1>+0x48(%rsp), %xmm3
  movsd <offset:1>+(%rsp), %xmm0
  movq <offset:1>+0x10(%rsp), %rsi
  movl 0x28c(%rsi), %ecx
  movq %rcx, <offset:1>+0x58(%rsp)
  movl 0x1c(%rsi), %r14d
  movl 0x368(%rsi), %edx
  movq %rdx, <offset:1>+0x98(%rsp)
  uninit  %xmm2
  xorpd %xmm2, %xmm2
  movsd %xmm3, %xmm2
  movlhps %xmm1, %xmm2
  uninit  %xmm1
  xorpd %xmm1, %xmm1
  movdqu <offset:1>+0x28(%rsp), %xmm4
  movsd %xmm4, %xmm1
  movlhps %xmm0, %xmm1
  movdqa %xmm2, %xmm0
  addpd %xmm1, %xmm0
  movdqu %xmm0, <offset:1>+0x68(%rsp)
  movdqu %xmm1, <offset:1>+0x78(%rsp)
  movdqu %xmm2, <offset:1>+0x88(%rsp)
  load_ext_name userextname11+0, %rax
  movq %r14, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label24; j label21
block23:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block24:
  movzbl %al, %eax
  leal (%r14, %rax), %r15d
  movdqu <offset:1>+0x68(%rsp), %xmm0
  pshufd $0xee, %xmm0, %xmm0
  load_ext_name userextname11+0, %rax
  movq <offset:1>+0x98(%rsp), %rdx
  movq %r15, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label28; j label25
block27:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block28:
  movq <offset:1>+0x10(%rsp), %rsi
  movl 0x368(%rsi), %edx
  leal 8(%r12), %esi
  load_ext_name userextname10+0, %r8
  movq <offset:1>+0xa0(%rsp), %rcx
  movq <offset:1>+8(%rsp), %rdi
  call    *%r8
  testb %al, %al
  jnz     label32; j label29
block31:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block32:
  movsd <offset:1>+(%rsp), %xmm0
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu %xmm0, <offset:1>+0x28(%rsp)
  movl 0x368(%rsi), %edx
  leal 8(%r13), %r12d
  load_ext_name userextname10+0, %rax
  movq <offset:1>+0xa0(%rsp), %rcx
  movq %r12, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label36; j label33
block35:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block36:
  movdqu <offset:1>+0x28(%rsp), %xmm2
  movsd <offset:1>+(%rsp), %xmm0
  movq <offset:1>+0x10(%rsp), %rsi
  movl 0x368(%rsi), %edx
  leal 8(%r14), %r15d
  uninit  %xmm1
  xorpd %xmm1, %xmm1
  movsd %xmm2, %xmm1
  movabsq $0x3ff0000000000000, %rax
  movq %rax, %xmm2
  movlhps %xmm2, %xmm1
  uninit  %xmm3
  xorpd %xmm3, %xmm3
  movsd %xmm0, %xmm3
  movlhps %xmm2, %xmm3
  movdqa %xmm1, %xmm0
  addpd %xmm3, %xmm0
  movdqu %xmm0, <offset:1>+0x28(%rsp)
  movdqu %xmm3, <offset:1>+0x38(%rsp)
  movdqu %xmm1, <offset:1>+0x48(%rsp)
  load_ext_name userextname11+0, %rax
  movq %r15, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label40; j label37
block39:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block40:
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu <offset:1>+0x28(%rsp), %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  movdqu <offset:1>+0x38(%rsp), %xmm2
  movupd %xmm0, 0xf8(%rsi)
  leal 0x20(%rbx), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x88(%rsp), %xmm3
  movupd %xmm3, 0xa8(%rsi)
  uninit  %xmm3
  xorpd %xmm3, %xmm3
  movdqu <offset:1>+0x68(%rsp), %xmm4
  ucomisd %xmm4, %xmm3
  seta %al
  movzbl %al, %edi
  shll $0xf, %edi
  ucomisd (%rip), %xmm4
  seta %al
  movzbl %al, %ecx
  shll $0xe, %ecx
  orl %ecx, %edi
  ucomisd (%rip), %xmm4
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %edi
  ucomisd (%rip), %xmm4
  setp %al
  movzbl %al, %ecx
  shll $0xc, %ecx
  orl %ecx, %edi
  movq <offset:1>+0x58(%rsp), %rax
  orl %eax, %edi
  andl $0xfffe0fff, %edi
  ucomisd %xmm0, %xmm3
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  ucomisd (%rip), %xmm0
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm0
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm0
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %edi
  movl %edi, 0x28c(%rsi)
  movdqu <offset:1>+0x68(%rsp), %xmm0
  movupd %xmm0, 0xe8(%rsi)
  movupd %xmm2, 0xd8(%rsi)
  movdqu <offset:1>+0x78(%rsp), %xmm0
  movupd %xmm0, 0xc8(%rsi)
  movupd %xmm1, 0xb8(%rsi)
  load_ext_name userextname32+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x100008, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label42; j label41
block42:
  movq <offset:1>+0x18(%rsp), %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block1:
  movl $0x800, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname22+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label3; j label2
block2:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block5:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r12d, 0x360(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname23+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label7; j label6
block6:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block9:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %ebx, 0x360(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname24+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label11; j label10
block10:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block13:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r13d, 0x360(%rsi)
  leal 4(%rbx), %eax
  movl %eax, (%rsi)
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  movsd %xmm1, %xmm0
  movdqu <offset:1>+0x38(%rsp), %xmm1
  movlhps %xmm1, %xmm0
  movupd %xmm0, 0xa8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname25+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x40002, %ecx
  load_ext_name userextname1+0, %r8
  movq <offset:1>+8(%rsp), %rdi
  call    *%r8
  testq %rax, %rax
  movq %rax, %r10
  jnz     label15; j label14
block14:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block17:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r14d, 0x360(%rsi)
  leal 4(%rbx), %edi
  movl %edi, (%rsi)
  uninit  %xmm5
  xorpd %xmm5, %xmm5
  movdqu <offset:1>+0x48(%rsp), %xmm3
  movsd %xmm3, %xmm5
  movdqu <offset:1>+0x38(%rsp), %xmm1
  movlhps %xmm1, %xmm5
  movupd %xmm5, 0xa8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %r9
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%r9
  load_ext_name userextname26+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x40002, %ecx
  load_ext_name userextname1+0, %r10
  movq <offset:1>+8(%rsp), %rdi
  call    *%r10
  testq %rax, %rax
  movq %rax, %r10
  jnz     label19; j label18
block18:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block21:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r14d, 0x360(%rsi)
  leal 0xc(%rbx), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x88(%rsp), %xmm0
  movupd %xmm0, 0xa8(%rsi)
  movq <offset:1>+0x58(%rsp), %rcx
  andl $0xfffe0fff, %ecx
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x68(%rsp), %xmm1
  ucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %esi
  shll $0xf, %esi
  movdqu <offset:1>+0x68(%rsp), %xmm0
  ucomisd (%rip), %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xe, %eax
  orl %eax, %esi
  ucomisd (%rip), %xmm0
  setnp %al
  sete %dl
  andl %edx, %eax
  movzbl %al, %eax
  shll $0xd, %eax
  orl %eax, %esi
  ucomisd (%rip), %xmm0
  setp %al
  movzbl %al, %eax
  shll $0xc, %eax
  orl %eax, %esi
  orl %esi, %ecx
  movq <offset:1>+0x10(%rsp), %rsi
  movl %ecx, 0x28c(%rsi)
  movupd %xmm0, 0xe8(%rsi)
  movdqu <offset:1>+0x78(%rsp), %xmm0
  movupd %xmm0, 0xc8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname27+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x80004, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label23; j label22
block22:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block25:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r15d, 0x360(%rsi)
  leal 0xc(%rbx), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x88(%rsp), %xmm0
  movupd %xmm0, 0xa8(%rsi)
  movq <offset:1>+0x58(%rsp), %rdi
  andl $0xfffe0fff, %edi
  movq %rdi, <offset:1>+0x58(%rsp)
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x68(%rsp), %xmm1
  ucomisd %xmm1, %xmm0
  seta %cl
  movzbl %cl, %ecx
  shll $0xf, %ecx
  movdqu <offset:1>+0x68(%rsp), %xmm0
  ucomisd (%rip), %xmm0
  seta %dl
  movzbl %dl, %edx
  shll $0xe, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm0
  setnp %dl
  sete %sil
  andl %esi, %edx
  movzbl %dl, %edx
  shll $0xd, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm0
  setp %dl
  movzbl %dl, %edx
  shll $0xc, %edx
  orl %edx, %ecx
  orl %ecx, %edi
  movq <offset:1>+0x10(%rsp), %rsi
  movq %rdi, <offset:1>+0x58(%rsp)
  movl %edi, 0x28c(%rsi)
  movupd %xmm0, 0xe8(%rsi)
  movdqu <offset:1>+0x78(%rsp), %xmm0
  movupd %xmm0, 0xc8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname28+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x80004, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label27; j label26
block26:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block29:
  leal 8(%r12), %eax
  movq <offset:1>+0x10(%rsp), %rsi
  movl %eax, 0x360(%rsi)
  leal 0x10(%rbx), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x88(%rsp), %xmm0
  movupd %xmm0, 0xa8(%rsi)
  movq <offset:1>+0x58(%rsp), %rdi
  andl $0xfffe0fff, %edi
  movq %rdi, <offset:1>+0x58(%rsp)
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x68(%rsp), %xmm1
  ucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %ecx
  shll $0xf, %ecx
  movdqu <offset:1>+0x68(%rsp), %xmm0
  ucomisd (%rip), %xmm0
  seta %al
  movzbl %al, %edx
  shll $0xe, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm0
  setnp %dl
  sete %sil
  andl %esi, %edx
  movzbl %dl, %edx
  shll $0xd, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm0
  setp %al
  movzbl %al, %edx
  shll $0xc, %edx
  orl %edx, %ecx
  orl %ecx, %edi
  movq <offset:1>+0x10(%rsp), %rsi
  movq %rdi, <offset:1>+0x58(%rsp)
  movl %edi, 0x28c(%rsi)
  movupd %xmm0, 0xe8(%rsi)
  movdqu <offset:1>+0x78(%rsp), %xmm0
  movupd %xmm0, 0xc8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname29+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0xa0005, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label31; j label30
block30:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block33:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r12d, 0x360(%rsi)
  leal 0x14(%rbx), %ecx
  movl %ecx, (%rsi)
  movdqu <offset:1>+0x88(%rsp), %xmm0
  movupd %xmm0, 0xa8(%rsi)
  movq <offset:1>+0x58(%rsp), %rdi
  andl $0xfffe0fff, %edi
  movq %rdi, <offset:1>+0x58(%rsp)
  uninit  %xmm3
  xorpd %xmm3, %xmm3
  movdqu <offset:1>+0x68(%rsp), %xmm0
  ucomisd %xmm0, %xmm3
  seta %sil
  movzbl %sil, %ecx
  shll $0xf, %ecx
  ucomisd (%rip), %xmm0
  seta %sil
  movzbl %sil, %esi
  shll $0xe, %esi
  orl %esi, %ecx
  ucomisd (%rip), %xmm0
  setnp %sil
  sete %dil
  andl %edi, %esi
  movzbl %sil, %esi
  shll $0xd, %esi
  orl %esi, %ecx
  ucomisd (%rip), %xmm0
  setp %dil
  movzbl %dil, %esi
  shll $0xc, %esi
  orl %esi, %ecx
  movq <offset:1>+0x58(%rsp), %rdi
  orl %ecx, %edi
  movq <offset:1>+0x10(%rsp), %rsi
  movq %rdi, <offset:1>+0x58(%rsp)
  movl %edi, 0x28c(%rsi)
  movupd %xmm0, 0xe8(%rsi)
  movdqu <offset:1>+0x78(%rsp), %xmm0
  movupd %xmm0, 0xc8(%rsi)
  uninit  %xmm5
  xorpd %xmm5, %xmm5
  movdqu <offset:1>+0x28(%rsp), %xmm2
  movsd %xmm2, %xmm5
  movabsq $0x3ff0000000000000, %r9
  movq %r9, %xmm0
  movlhps %xmm0, %xmm5
  movupd %xmm5, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %r11
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%r11
  load_ext_name userextname30+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0xc0006, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label35; j label34
block34:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block37:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r15d, 0x360(%rsi)
  movdqu <offset:1>+0x28(%rsp), %xmm0
  movupd %xmm0, 0xf8(%rsi)
  leal 0x1c(%rbx), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x88(%rsp), %xmm1
  movupd %xmm1, 0xa8(%rsi)
  uninit  %xmm1
  xorpd %xmm1, %xmm1
  movdqu <offset:1>+0x68(%rsp), %xmm2
  ucomisd %xmm2, %xmm1
  seta %al
  movzbl %al, %ecx
  shll $0xf, %ecx
  ucomisd (%rip), %xmm2
  seta %al
  movzbl %al, %edx
  shll $0xe, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm2
  setnp %dl
  sete %sil
  andl %esi, %edx
  movzbl %dl, %edx
  shll $0xd, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm2
  setp %al
  movzbl %al, %edx
  shll $0xc, %edx
  orl %edx, %ecx
  movq <offset:1>+0x58(%rsp), %rdi
  orl %edi, %ecx
  andl $0xfffe0fff, %ecx
  ucomisd %xmm0, %xmm1
  seta %al
  movzbl %al, %r11d
  shll $0xf, %r11d
  ucomisd (%rip), %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xe, %eax
  orl %eax, %r11d
  ucomisd (%rip), %xmm0
  setnp %al
  sete %dl
  andl %edx, %eax
  movzbl %al, %eax
  shll $0xd, %eax
  orl %eax, %r11d
  ucomisd (%rip), %xmm0
  setp %al
  movzbl %al, %eax
  shll $0xc, %eax
  orl %eax, %r11d
  orl %r11d, %ecx
  movq <offset:1>+0x10(%rsp), %rsi
  movl %ecx, 0x28c(%rsi)
  movdqu <offset:1>+0x68(%rsp), %xmm0
  movupd %xmm0, 0xe8(%rsi)
  movdqu <offset:1>+0x38(%rsp), %xmm2
  movupd %xmm2, 0xd8(%rsi)
  movdqu <offset:1>+0x78(%rsp), %xmm0
  movupd %xmm0, 0xc8(%rsi)
  movdqu <offset:1>+0x48(%rsp), %xmm1
  movupd %xmm1, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname31+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x100008, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label39; j label38
block38:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block41:
  movq 0xb0(%rsp), %rbx
  movq 0xb8(%rsp), %r12
  movq 0xc0(%rsp), %r13
  movq 0xc8(%rsp), %r14
  movq 0xd0(%rsp), %r15
  addq $0xe0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
